# Auriya

./: .env.example  .env.production  .gitignore  .vercelignore  CLEANUP_SUMMARY.md  DEPLOY_TOMORROW.md  LICENSE  README.md  deploy.bat  deploy.sh  next.config.mjs  package-lock.json  package.json  supabase-schema.sql  vercel.json
app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
backend/: .env.example  package-lock.json  package.json  server.js
components/: bonding-curve-chart.tsx  bonding-curve-trader.tsx  connect-wallet-button.tsx  connect-wallet-modal.tsx  footer.tsx  header.tsx  kyc-status.tsx  live-price-ticker.tsx  music-player.tsx  nav.tsx  providers.tsx  realtime-activity.tsx  realtime-stats.tsx  sidebar.tsx  song-card.tsx  top-holders.tsx  trade-panel.tsx  trades-table.tsx  trading-chart.tsx
contracts/: README.md
hooks/: useRealtime.ts
lib/: algorand.ts  bonding-curve.ts  database.ts  database.types.ts  ipfs.ts  mock-data.ts
scripts/: compile.py  deploy.js
smart_contracts/projects/auriya-contracts/: .algokit.toml  pyproject.toml  requirements.txt
smart_contracts/projects/auriya-contracts/smart_contracts/: __init__.py  deploy.py
smart_contracts/projects/auriya-contracts/smart_contracts/dao_governance/: arc32.json  contract.py
smart_contracts/projects/auriya-contracts/smart_contracts/fungible_token/: arc32.json  contract.py
smart_contracts/projects/auriya-contracts/smart_contracts/music_nft/: arc32.json  contract.py
smart_contracts/projects/auriya-contracts/smart_contracts/royalty_splitter/: arc32.json  contract.py
(+37 files in other folders)
